# fractall-rust

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  HARNESS.md  README.md  SCORECARD.md  TODO.md  perturbation.md
.github/workflows/: ci.yml
bench/: viewer.html
bench/compare/: 11_dimensions__fractall.exr  _summary.csv  _summary.md  adventurous_forest__fractall.exr  all_seeing_eye__fractall.exr  dinosaur_fossils__fractall.exr  dragon__fractall.exr  dragon_detail__fractall.exr  e1000__fractall.exr  e1016__fractall.exr  e1086__fractall.exr  e1121__fractall.exr  e113__fractall.exr  e1200__fractall.exr  e1298__fractall.exr  e227__fractall.exr  e318__fractall.exr  e401__fractall.exr  e50__fractall.exr  e533__fractall.exr  e634__fractall.exr  e8000__fractall.exr  e890__fractall.exr  flake__fractall.exr  floral_fantasy__fractall.exr  glitch_test_1__fractall.exr  glitch_test_2__fractall.exr  glitch_test_3__fractall.exr  glitch_test_4__fractall.exr  glitch_test_5__fractall.exr  glitch_test_6__fractall.exr  golden_spider__fractall.exr  heaven__fractall.exr  infinity__fractall.exr  integral_of_ex2__fractall.exr  layers__fractall.exr  leaded_glass__fractall.exr  liiiines__fractall.exr  line__fractall.exr  long__fractall.exr  (+30 more)
bench/compare_er25/: _summary.csv  _summary.md
bench/compare_er4/: _summary.csv  _summary.md
docs/: imagina-algorithms-analysis.md  outcoloring_reference.md  p3-1-task6-investigation.md  p3-1-task6-session-a-findings.md  p3-1-task6-session-c-findings.md  p3-1-task6-session-e-findings.md  p3-1-task7-gpu.md
examples/: bench_gmp_iter.rs
fraktaler-3-3.1/: Makefile  README.md  VERSION.txt  e14_compare.f3.toml  fraktaler-3-3.1.macos  fraktaler-3-analysis.md  fraktaler-3.css
harness/: README.md  adjudications.json  baseline.json  f3-degenerate.json  quarantine.json  resolved.json  slow-safe.json
scripts/: build_f3_linux.sh  build_fractalshark_linux.sh  build_viewer.py  compare_f3.py  fuzz_scenes.py  harness.py  hunt_qa_scene.py  independent_probe.py  render_corpus.py  test_harness_guard.py  three_way_gmp.py
src/: main.rs  main_gui.rs  main_quality.rs
tests/: golden_images.rs
toml/: all_seeing_eye.toml  hybrid_mbs_smooth_e13.toml  hybrid_mbs_smooth_e8.toml  hybrid_rot_smooth_e10.toml  hybrid_rot_smooth_e13.toml
(+327 files in other folders)
