[package]
name = "fractall-cli"
version = "0.1.0"
edition = "2021"
description = "Version en ligne de commande de fractall (visualiseur de fractales)"

[[bin]]
name = "fractall-cli"
path = "src/main.rs"

[[bin]]
name = "fractall-gui"
path = "src/main_gui.rs"

[dependencies]
# CLI avec derive pour simplifier la définition des arguments
clap = { version = "4.5", features = ["derive"] }
# Image avec support PNG natif (détection automatique du format)
image = "0.25"
# Nombres complexes pour les calculs de fractales (avec serde pour métadonnées PNG)
num-complex = { version = "0.4", features = ["serde"] }
# Parallélisation multi-cœurs pour le rendu et la colorisation
rayon = "1.11"
# GUI avec egui (wgpu backend pour rendu GPU)
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = "0.27"
# GPU (wgpu) + helpers
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
# Haute précision GMP/MPFR/MPC via rug (libs natives requises)
rug = { version = "1.24", features = ["float", "complex"] }
# Sérialisation pour métadonnées PNG
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Accès bas-niveau aux chunks PNG pour métadonnées
png = "0.17"
